[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raccoonlab-tools"
version = "0.0.2"
authors = [
  { name="Dmitry Ponomarev", email="PonomarevDA96@gmail.com" },
]
description = "RaccoonLab tools"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
rl-test-cyphal-specification = "raccoonlab_tools.scripts.cyphal.test_specification:main"

[project.urls]
"Homepage" = "https://github.com/PonomarevDA/tools"
"Bug Tracker" = "https://github.com/PonomarevDA/tools/issues"
