[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raccoonlab-tools"
version = "0.0.3"
authors = [
  { name="Dmitry Ponomarev", email="PonomarevDA96@gmail.com" },
]
description = "RaccoonLab tools"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
rl-test-cyphal-specification = "raccoonlab_tools.scripts.cyphal.test_specification:main"
rl-test-dronecan-specification = "raccoonlab_tools.scripts.dronecan.test_specification:main"
rl-check-protocol = "raccoonlab_tools.scripts.common.check_protocol:main"
rl-upload-firmware = "raccoonlab_tools.scripts.common.upload_firmware:main"
rl-get-dronecan-params = "raccoonlab_tools.scripts.dronecan.get_params:main"
rl-set-dronecan-params = "raccoonlab_tools.scripts.dronecan.set_params:main"
rl-dronecan-config = "raccoonlab_tools.scripts.dronecan.config:main"

[project.urls]
"Homepage" = "https://github.com/PonomarevDA/tools"
"Bug Tracker" = "https://github.com/PonomarevDA/tools/issues"
